feature-ready! couple of TODO for future task

--- a/myproject/index.html
+++ b/myproject/index.html
@@ -9,6 +9,118 @@
   <body>
 
     <canvas id = "bg"></canvas>
+
+    <main>
+
+      <header>
+        <h1>Spencer Rafada</h1>
+        <p>🚀 Welcome to my website!</p>
+      </header>
+
+
+      <blockquote>
+        <p>I like to code, play video games, and analyze different content.</p>
+      </blockquote>
+
+      <section>
+        <h2>📜 Manifesto</h2>
+        <p>
+          Disclaimer: This project is meant for learning purpose. I learned this project on a Youtube Channel called Fireship by Jeff Delaney. You can check his github project here in: https://github.com/fireship-io/threejs-scroll-animation-demo/blob/main/style.css
+        </p>
+
+        <p>
+          I started this learning project on the beginning of February and finished it on February 16, 2022. I hope to learn more about three.js and the different libraries in regards to front-end development. Right now, I am doing an internship for The Church of Jesus Christ of Latter-Day Saints
+          as a Quality Assurance Engineer Intern. I like it, but I still want to explore more career paths while I am still in college. I love working both back-end and front-end so I will keep learning and uploading everything on my GitHub profile.
+        </p>
+
+        <p>
+          I am currently studying BS Computer Engineering in Brigham Young University - Idaho. I am expected to graduate on Spring of 2023. I hope by that time, I will have enough experience to create my own projects such as this.
+          I am still pondering about making my own YouTube videos too!!
+        </p>
+
+      </section>
+
+      <section class="light">
+        <h2>👩🏽‍🚀 Projects</h2>
+
+        <h3>Algorithm Design | BYU-I | April 2021 - June 2021</h3>
+        <p>
+          Applied metrics and quality design to provide the most efficient solution for a problem within the given amount of time
+        </p>
+        <p>
+          Recommended an algorithmic solution accompanied by a trace table and efficiency measurement for the final project
+        </p>
+
+        <h3>Programming with Data Structure | BYU-I | September 2021 - December 2021</h3>
+        <p>
+          Created a beginner-friendly Python tutorial about Data Structures and their implementation
+        </p>
+        <p>
+          Link: https://github.com/spencer-rafada/cse212-final-project
+        </p>
+        
+        <h3>C Language | BYU-I | September 2021 - December 2021</h3>
+        <p>
+          Created a mini project "World Record list" and uses Linked List as the Data Structure
+        </p>
+
+        <h3>JavaScript Language | BYU-I | September 2021 - December 2021</h3>
+        <p>
+          Created a mini project that gets data from an open API and displays all of the astronauts in space
+        </p>
+
+        <h3>Computer Systems | BYU-I | September 2021 - December 2021</h3>
+        <p>
+          Implemented an Arduino project that requires the use of both hardware and software
+        </p>
+
+        <p>
+          Link: https://github.com/spencer-rafada/ecen-106-final-project
+        </p>
+
+      </section>
+
+      <blockquote>
+        <p>The best way out is always through <br>-Robert Frost</p>
+      </blockquote>
+
+      <section class="left">
+        <h2>🌮 Work History</h2>
+
+        <h3>Quality Assurance Engineer Intern | The Church of Jesus Christ of Latter-Day Saints | January 2022 - Present</h3>
+        <li>Initiated functional testing on different projects developed by the team</li>
+        <li>Assured the quality of the product before release</li>
+        <li>Coordinated with a team of professionals to accomplish the tasks needed to finish</li>
+
+        <h3>Food Services | BYU-I | April 2021 - October 2021</h3>
+        <li>Adapted in a fast-working environment to meet the daily demands of the restaurant</li>
+        <li>Collaborated with a diverse team to serve food daily</li>
+        <li>Communicated with people to accommodate their concerns and needs</li>
+        
+        <h3>Heber J. Grand Mentoring Program | BYU-I | September 2021 - December 2021</h3>
+        <li>Volunteered as a peer-mentor to incoming freshmen at the university</li>
+        <li>Mentored mentees to show and explain the different resources that the University has to offer for them to make their schooling the best</li>
+        <li>Collaborated with different peer-mentors to discuss about improvements and different ways to help mentees</li>
+
+        <h3>Volunteer Full-Time Missionary | The Church of Jesus Christ of Latter-Day Saints | Jan 2019 - April 2020</h3>
+        <li>Accounted for the finances of the mission headquarters and worked closely with the President of the mission</li>
+        <li>Collaborated with different banks and companies for getting mission supplies</li>
+        <li>Managed and oversaw the supply chain of the mission and its missionaries</li>
+        <li>Worked in companionship with many foreign people from different areas of the world</li>
+
+        <h3>Gardening Crew | BYU-I | April 2018 - July 2018</h3>
+        <li>Assisted in cleaning and maintaining campus and housing grounds</li>
+        <li>Managed time in between working and studying</li>
+
+      </section>
+
+      <blockquote>
+        <p>Thanks for taking interest in my life!</p>
+      </blockquote>
+
+
+    </main>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
